--- a/top.html
+++ b/top.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Top 10 Puntuaciones</title>
+  <title>Ranking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="assets\miniatura.png" type="image/png">
   <link rel="stylesheet" href="top.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
